[gd_scene load_steps=5 format=3 uid="uid://lcidexlgme08"]

[ext_resource type="Script" path="res://Scenes/ready_screen.gd" id="1_5ngrx"]
[ext_resource type="Theme" uid="uid://bcmjs0qer7m38" path="res://Fonts/MainFont.tres" id="2_65phv"]

[sub_resource type="Animation" id="Animation_fd038"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0n6xg"]
_data = {
"fade_out": SubResource("Animation_fd038")
}

[node name="ReadyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ngrx")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.388235, 0.478431, 1)

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 784.0
offset_top = 360.0
offset_right = -776.0
offset_bottom = -408.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_65phv")

[node name="Ready" type="Button" parent="Buttons"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.384615
text = "Ready"
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="Button" parent="Buttons"]
layout_mode = 0
anchor_left = -0.0222222
anchor_top = 0.615385
anchor_right = 1.0
anchor_bottom = 1.0
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0n6xg")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Buttons/Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
